brash up code